init/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app
  namespace: test-app
  labels:
    app: apache-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80
