init/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-app
  namespace: test-app
  labels:
    app: apache-app
spec:
  selector:
    app: apache-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
